# lms_system_drf

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test_report.txt
config/: settings.py  urls.py
courses/: models.py  permissions.py  schemas.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/management/commands/: create_schedule.py  payment_fill.py
courses/migrations/: 0001_initial.py  0002_alter_lesson_video.py  0003_payment.py  0004_course_students_lesson_students.py  0005_subscription.py  0006_course_price_lesson_price_payment_status_and_more.py  0007_course_updated_at_lesson_updated_at_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
